src/components/Showcase.css
.showcase__row {
  padding: 1rem;
  
}

h1 {
  text-align: left;
  color: var(--white);
  text-shadow:
  0 0 7px var(--white);
}

.showcase__container {
  display: flex;
  flex-flow: column;
  align-items: center;
  width: 96%;
  margin: 1em;
  height: auto;
  padding-bottom: 1em;
  background-color: var(--black);
  border-radius: 2em;
}



.showcase__items {
  margin-bottom: 24px;
  display: grid;
}

.showcase__item {
  display: flex;
  flex: 1;
  border-radius: 10px;
  background-color: var(--white);
}

.showcase__item__link {
  display: flex;
  flex-flow: column;
  width: 100%;
  padding: 1em;
  border-radius: 10px;
  overflow: hidden;

}

.showcase__item__link:hover{ 
  box-shadow: 0 6px 20px var(--white);
  -webkit-filter: drop-shadow(0 6px 20px var(--white));
  filter: drop-shadow(0 6px 20px var(--white));
}


.showcase__item__img {
  display: grid;
  position: relative;
  width: 14em;
  height: 14em;
  margin-left: auto;
  margin-right: auto;
}

.showcase__item__info {
  padding: 0.5em;
}

.showcase__item__text {
  color: #252e48;
  font-size: 1em;
  line-height: 22px;
  margin-top: 1em;
  margin-bottom: 0;
}

@media only screen and (min-width: 1200px) {
  .content__blog__container {
    width: 84%;
  }
}

@media only screen and (min-width: 1024px) {
  .showcase__items {
    display: flex;
  }
}

@media only screen and (max-width: 1024px) {
  .showcase__item {
    margin-bottom: 2rem;
  }
}

